NonUnif kinda working. Will soon fix error in Compression as well.

--- a/Viewers/SkatePark_Comp.html
+++ b/Viewers/SkatePark_Comp.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <a-scene>
-        <a-sky src="Output360/SkatePark.jpg"></a-sky>
+        <a-sky src="Output360/SkatePark_Comp.jpg"></a-sky>
     </a-scene>
 </body>
 </html>
