Finished last write up. Submit soon. No more edits unless necessary.

--- a/Viewers/CubeMap_Sampling.html
+++ b/Viewers/CubeMap_Sampling.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <a-scene>
-        <a-sky src="Output360/CubeMap.jpg"></a-sky>
+        <a-sky src="Output360/CubeMap_Sampling.jpg"></a-sky>
     </a-scene>
 </body>
 </html>
