--- a/Viewers/CubeMap_Comp.html
+++ b/Viewers/CubeMap_Comp.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Cube Map: Original after transform">
-        <title>Cube Map: Original</title>
+        <title>Cube Map: Compressed</title>
         <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
         <script src="https://unpkg.com/aframe-cubemap-component@0.1.4/dist/aframe-cubemap-component.min.js"></script>
     </head>
